	paper where the analysed the confusion of location (differences
	between groups) and dispersion (variability within groups) in
	dissimilarity-based analyses.  We have warned on this for long in
	vegan, but now we can get support from this paper. Warnings added
	to anosim, mrpp, simper (where this worst) and adonis (where this
	was already analysed by Marti Anderson when introducing the
	method).
	
Version 2.1-13 (closed March 9, 2012)

	* cca/rda/capscale: names of levels could be dropped if a
	two-class factor was used as the only constraint. Noticed in an
	email of Sascha Kirchner (Univ Helsinki, Finland).
	
	* scores: expand description of the default method to avoid
	confusion with specific vegan methods.
	
	* scores.monoMDS: did not know 'choices' and hence plot() was also
	unable to choose dimensions. 
	
	* vegdist: Added Cao dissimilarity (CYd). Thanks to Yong Cao for
	consultation. 
	
Version 2.1-12 (closed February 23, 2012)

	* scores.default: failed if users asked scores of non-existing
	axes. This was reported as an error in ordiplot() when the user
	tried to plot 2-dim graph of 1-dim solution in
	https://stat.ethz.ch/pipermail/r-sig-ecology/2012-February/002764.html

	* simper: new function to implement "similarity percentages" of
	Clarke (Austral. J. Ecol. 18, 117-143; 1993) contributed by Eduard
	Szöcz (Uni Landau, Germany).

Version 2.1-11 (closed February 9, 2012)

	* indpower: now can handle input objects without dimnames.  This
	caused problems with oecosimu, because nullmodel objects have no
	dimnames to save memory.  Extended example on indpower help page
	shows the p-value and heterogeneity calculations suggested in
	Halme et al. 2009.

	* adonis, anosim, mantel, mantel.partial, mrpp, permutest.cca: do
	not need clusterEvalQ(parallel, library(vegan)) for socket
	clusters. 

	* adonis: added missing 'mc.cores=' for multicore parallel
	processing. 

	* bioenv: implemented parallel processing.
